--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vuetify-audio",
+  "name": "vue-audio",
   "version": "0.1.2",
-  "description": "Vue.js audio files player with Vuetify UI framework",
+  "description": "Vue.js audio files player with no framework (depends external bootstrap CSS)",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wilsonwu/vuetify-audio.git"
+    "url": "git+https://github.com/zack-hable/vue-audio"
   },
   "keywords": [
     "audio",
@@ -20,15 +20,14 @@
     "player",
     "vue",
     "vue.js",
-    "vuetify",
-    "vuetifyjs"
+    "bootstrap"
   ],
   "author": "Wilson Wu",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/wilsonwu/vuetify-audio/issues"
+    "url": "https://github.com/zack-hable/vue-audio/issues"
   },
-  "homepage": "https://github.com/wilsonwu/vuetify-audio/issues#readme",
+  "homepage": "https://github.com/zack-hable/vue-audio/issues#readme",
   "devDependencies": {
     "watch-http-server": "^0.7.6",
     "babel-eslint": "^10.0.3",
